[project]
name = "job-executors-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.3",
    "pykka>=4.1.1",
    "uvicorn>=0.32.1",
    "websockets>=14.1",
]
